Update and rename ananmapdit.html to love.html

--- a/love.html
+++ b/love.html
@@ -11,7 +11,7 @@
     <meta name="Author" content="" />
     <meta name="Keywords" content="" />
     <meta name="Description" content="" />
-    <link rel="stylesheet" href="ananmapdit.css">
+    <link rel="stylesheet" href="love.css">
 </head>
 
 <body>
